internal/xds/translator/testdata/out/xds-ir/compressor-with-settings.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      requestHeadersToRemove:
      - accept-encoding
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor.brotli:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            compressorLibrary:
              name: envoy.compression.brotli.compressor
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.compression.brotli.compressor.v3.Brotli
                chunkSize: 8192
                disableLiteralContextModeling: true
                encoderMode: TEXT
                inputBlockBits: 16
                quality: 11
                windowBits: 24
            responseDirectionConfig: {}
        envoy.filters.http.compressor.gzip:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            compressorLibrary:
              name: envoy.compression.gzip.compressor
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                chunkSize: 8192
                compressionLevel: COMPRESSION_LEVEL_9
                compressionStrategy: RLE
                memoryLevel: 8
                windowBits: 15
            responseDirectionConfig: {}
        envoy.filters.http.compressor.zstd:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            compressorLibrary:
              name: envoy.compression.zstd.compressor
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.compression.zstd.compressor.v3.Zstd
                chunkSize: 65536
                compressionLevel: 22
                enableChecksum: true
                strategy: BTULTRA2
            responseDirectionConfig: {}
